--- a/.github/workflows/python-testing.yml
+++ b/.github/workflows/python-testing.yml
@@ -1,20 +1,24 @@
-name: Python Testing 
+name: Python Testing
+on:
+  push:
+    branches: [ main, dev ]
+  workflow_dispatch:
 
-on: [push, pull_request] 
+jobs:
+  test:
+    runs-on: ubuntu-latest
 
-jobs: 
-	test: 
-		name: Python testins
-		runs-on: ubuntu-latest 
+    steps:
+    - name: Get latest code
+      uses: actions/checkout@v2
 
-		steps: 
-			- name: Checkout Repository
-			  uses: actions/checkout@v2 
-			- name: Set up Python
-			  uses: actions/setup-python@v2 
-			  with:
-				python-version: 3.8 
-			- name: Install dependencies 
-			  run: | python -m pip install --upgrade pip pip install -r requirements.txt 
-			- name: Run tests 
-			  run: | ./tests.sh 
+    - name: Set up Python
+      uses: actions/setup-python@v2
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip pip install -r requirements.txt
+    
+    - name: Run tests
+      run: |
+        ./tests.sh 
