--- a/.github/workflows/python-testing.yml
+++ b/.github/workflows/python-testing.yml
@@ -17,7 +17,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        ls; python -m pip install --upgrade pip pip install -r requirements.txt
+        python -m pip install -r requirements.txt
     
     - name: Run tests
       run: |
